--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -26,335 +26,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <th>int_rate</th>\n",
-       "      <th>installment</th>\n",
-       "      <th>home_ownership</th>\n",
-       "      <th>annual_inc</th>\n",
-       "      <th>verification_status</th>\n",
-       "      <th>pymnt_plan</th>\n",
-       "      <th>dti</th>\n",
-       "      <th>delinq_2yrs</th>\n",
-       "      <th>inq_last_6mths</th>\n",
-       "      <th>...</th>\n",
-       "      <th>percent_bc_gt_75</th>\n",
-       "      <th>pub_rec_bankruptcies</th>\n",
-       "      <th>tax_liens</th>\n",
-       "      <th>tot_hi_cred_lim</th>\n",
-       "      <th>total_bal_ex_mort</th>\n",
-       "      <th>total_bc_limit</th>\n",
-       "      <th>total_il_high_credit_limit</th>\n",
-       "      <th>hardship_flag</th>\n",
-       "      <th>debt_settlement_flag</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7000.0</td>\n",
-       "      <td>0.1894</td>\n",
-       "      <td>256.38</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>75000.0</td>\n",
-       "      <td>Not Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>28.62</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>87.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>352260.0</td>\n",
-       "      <td>62666.0</td>\n",
-       "      <td>35000.0</td>\n",
-       "      <td>10000.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>0.1614</td>\n",
-       "      <td>975.71</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>102000.0</td>\n",
-       "      <td>Source Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>11.72</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>294664.0</td>\n",
-       "      <td>109911.0</td>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>71044.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11000.0</td>\n",
-       "      <td>0.2055</td>\n",
-       "      <td>294.81</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>45000.0</td>\n",
-       "      <td>Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>37.25</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>92228.0</td>\n",
-       "      <td>36007.0</td>\n",
-       "      <td>33000.0</td>\n",
-       "      <td>46328.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 84 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   loan_amnt  int_rate  installment home_ownership  annual_inc  \\\n",
-       "0     7000.0    0.1894       256.38       MORTGAGE     75000.0   \n",
-       "1    40000.0    0.1614       975.71       MORTGAGE    102000.0   \n",
-       "2    11000.0    0.2055       294.81           RENT     45000.0   \n",
-       "\n",
-       "  verification_status pymnt_plan    dti  delinq_2yrs  inq_last_6mths  ...  \\\n",
-       "0        Not Verified          n  28.62          0.0             2.0  ...   \n",
-       "1     Source Verified          n  11.72          2.0             0.0  ...   \n",
-       "2            Verified          n  37.25          1.0             3.0  ...   \n",
-       "\n",
-       "   percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  tot_hi_cred_lim  \\\n",
-       "0              87.5                   0.0        0.0         352260.0   \n",
-       "1               0.0                   0.0        0.0         294664.0   \n",
-       "2               7.7                   0.0        0.0          92228.0   \n",
-       "\n",
-       "  total_bal_ex_mort  total_bc_limit  total_il_high_credit_limit  \\\n",
-       "0           62666.0         35000.0                     10000.0   \n",
-       "1          109911.0          9000.0                     71044.0   \n",
-       "2           36007.0         33000.0                     46328.0   \n",
-       "\n",
-       "   hardship_flag  debt_settlement_flag    target  \n",
-       "0              N                     N  low_risk  \n",
-       "1              N                     N  low_risk  \n",
-       "2              N                     N  low_risk  \n",
-       "\n",
-       "[3 rows x 84 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <th>int_rate</th>\n",
-       "      <th>installment</th>\n",
-       "      <th>home_ownership</th>\n",
-       "      <th>annual_inc</th>\n",
-       "      <th>verification_status</th>\n",
-       "      <th>pymnt_plan</th>\n",
-       "      <th>dti</th>\n",
-       "      <th>delinq_2yrs</th>\n",
-       "      <th>inq_last_6mths</th>\n",
-       "      <th>...</th>\n",
-       "      <th>percent_bc_gt_75</th>\n",
-       "      <th>pub_rec_bankruptcies</th>\n",
-       "      <th>tax_liens</th>\n",
-       "      <th>tot_hi_cred_lim</th>\n",
-       "      <th>total_bal_ex_mort</th>\n",
-       "      <th>total_bc_limit</th>\n",
-       "      <th>total_il_high_credit_limit</th>\n",
-       "      <th>hardship_flag</th>\n",
-       "      <th>debt_settlement_flag</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>0.1033</td>\n",
-       "      <td>856.40</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>128700.0</td>\n",
-       "      <td>Source Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>12.47</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>57.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>63915.0</td>\n",
-       "      <td>49510.0</td>\n",
-       "      <td>49400.0</td>\n",
-       "      <td>14515.0</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>24450.0</td>\n",
-       "      <td>0.1430</td>\n",
-       "      <td>572.72</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>44574.0</td>\n",
-       "      <td>Not Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>15.05</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>136425.0</td>\n",
-       "      <td>19439.0</td>\n",
-       "      <td>15500.0</td>\n",
-       "      <td>18925.0</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13500.0</td>\n",
-       "      <td>0.1430</td>\n",
-       "      <td>316.23</td>\n",
-       "      <td>OWN</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>Not Verified</td>\n",
-       "      <td>n</td>\n",
-       "      <td>28.72</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>82124.0</td>\n",
-       "      <td>65000.0</td>\n",
-       "      <td>5400.0</td>\n",
-       "      <td>61724.0</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>N</td>\n",
-       "      <td>low_risk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 84 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   loan_amnt  int_rate  installment home_ownership  annual_inc  \\\n",
-       "0    40000.0    0.1033       856.40           RENT    128700.0   \n",
-       "1    24450.0    0.1430       572.72       MORTGAGE     44574.0   \n",
-       "2    13500.0    0.1430       316.23            OWN     60000.0   \n",
-       "\n",
-       "  verification_status pymnt_plan    dti  delinq_2yrs  inq_last_6mths  ...  \\\n",
-       "0     Source Verified          n  12.47          0.0             1.0  ...   \n",
-       "1        Not Verified          n  15.05          0.0             1.0  ...   \n",
-       "2        Not Verified          n  28.72          0.0             0.0  ...   \n",
-       "\n",
-       "   percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  tot_hi_cred_lim  \\\n",
-       "0              57.1                   0.0        0.0          63915.0   \n",
-       "1               0.0                   0.0        0.0         136425.0   \n",
-       "2               0.0                   0.0        0.0          82124.0   \n",
-       "\n",
-       "  total_bal_ex_mort  total_bc_limit  total_il_high_credit_limit  \\\n",
-       "0           49510.0         49400.0                     14515.0   \n",
-       "1           19439.0         15500.0                     18925.0   \n",
-       "2           65000.0          5400.0                     61724.0   \n",
-       "\n",
-       "   hardship_flag  debt_settlement_flag    target  \n",
-       "0              Y                     N  low_risk  \n",
-       "1              N                     N  low_risk  \n",
-       "2              Y                     N  low_risk  \n",
-       "\n",
-       "[3 rows x 84 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "test_df.head(3)"
+    "#### Prediction \n",
+    "\n",
+    "Predict forest model classifier would perform better due to classification and numerical data "
    ]
   },
   {
@@ -417,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -447,6 +126,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion \n",
+    "\n",
+    "the forest model classifier performed better, confirming prediction rfc 64.5% > 51%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prediction \n",
+    "\n",
+    "Predict logistic regression model performs better due to the scaled data between data. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -456,7 +153,9 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(x_train)\n",
+    "#### Prediction \n",
     "\n",
+    "Predict forest model classifier would perform better due to classification and numerical data \n",
     "x_train_scaled=scaler.transform(x_train)\n",
     "x_test_scaled=scaler.transform(x_test)"
    ]
@@ -515,6 +214,22 @@
    "source": [
     "# logistic regression model performed better in the scaled data "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion \n",
+    "\n",
+    "Logistic Regression model performed better as predicted, 76% > 65%, significantly performing better than the unscaled data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
